--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                     </div>
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4">
-                            <a href="./index.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="index.html">Dashboard</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/image_creator15.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="image_creator15.html">Social Image Creator</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/watermarker" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker">Photo Watermarker</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/bulk.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="bulk.html">Bulk Watermarking</a>
@@ -59,36 +58,12 @@
                     </div>
                 </div>
                 <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-                    <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-                        <span class="absolute -inset-1.5"></span>
-                        <span class="sr-only">View notifications</span>
-                        <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-                        </svg>
-                    </button>
-
-                    <div class="relative ml-3">
-                        <div>
-                            <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-                                <span class="absolute -inset-1.5"></span>
-                                <span class="sr-only">Open user menu</span>
-                                <img class="size-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                            </button>
-                        </div>
-
-                        <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="user-dropdown">
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-                        </div>
                     </div>
-                </div>
             </div>
         </div>
 
         <div class="sm:hidden hidden" id="mobile-menu">
             <div class="space-y-1 px-2 pt-2 pb-3">
-                <a href="./index.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="index.html">Dashboard</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/image_creator15.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="image_creator15.html">Social Image Creator</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/watermarker" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker">Photo Watermarker</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/bulk.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="bulk.html">Bulk Watermarking</a>
@@ -96,8 +71,7 @@
         </div>
     </nav>
 
-    <main class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8 pt-24"> <h1 class="text-3xl font-bold text-gray-900 mb-8">Your Image Creation Tools</h1>
-
+    <main class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8 pt-24">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div id="social-image-creator" class="tool-card">
                 <img src="./assets/social-media-image (3).png" alt="Illustration of social media image creation" class="w-full h-48 object-cover rounded-md mb-4">
@@ -123,45 +97,27 @@
     </main>
 
     <script>
-        // JavaScript for mobile menu and profile dropdown toggles
+        // JavaScript for mobile menu toggle
         const mobileMenuButton = document.querySelector('[aria-controls="mobile-menu"]');
         const mobileMenu = document.getElementById('mobile-menu');
-        const userMenuButton = document.getElementById('user-menu-button');
-        const userDropdown = document.getElementById('user-dropdown');
 
         mobileMenuButton.addEventListener('click', () => {
             const isExpanded = mobileMenuButton.getAttribute('aria-expanded') === 'true';
             mobileMenuButton.setAttribute('aria-expanded', !isExpanded);
             mobileMenu.classList.toggle('hidden');
-            // Toggle SVG icons
             mobileMenuButton.querySelector('.block').classList.toggle('hidden');
             mobileMenuButton.querySelector('.hidden').classList.toggle('block');
-        });
-
-        userMenuButton.addEventListener('click', () => {
-            const isExpanded = userMenuButton.getAttribute('aria-expanded') === 'true';
-            userMenuButton.setAttribute('aria-expanded', !isExpanded);
-            userDropdown.classList.toggle('hidden');
-        });
-
-        // Close dropdowns if clicked outside
-        window.addEventListener('click', (event) => {
-            if (!userMenuButton.contains(event.target) && !userDropdown.contains(event.target)) {
-                userDropdown.classList.add('hidden');
-                userMenuButton.setAttribute('aria-expanded', 'false');
-            }
         });
 
         // JavaScript for highlighting active navigation link
         document.addEventListener('DOMContentLoaded', () => {
             const navLinks = document.querySelectorAll('.nav-link');
-            const currentPathname = window.location.pathname; // e.g., /Social_Image_Creator/index.html
+            const currentPathname = window.location.pathname;
 
             navLinks.forEach(link => {
-                const linkHref = link.href; // Full URL from the link
-                const linkPathname = new URL(linkHref).pathname; // e.g., /Social_Image_Creator/watermarker
-
-                // Normalize paths for comparison (handle index.html and trailing slashes)
+                const linkHref = link.href;
+                const linkPathname = new URL(linkHref).pathname;
+                
                 let normalizedCurrentPath = currentPathname;
                 if (normalizedCurrentPath.endsWith('/')) {
                     normalizedCurrentPath += 'index.html';
@@ -172,21 +128,12 @@
                     normalizedLinkPath += 'index.html';
                 }
 
-                // Remove the base path to compare just the relevant part (e.g., "index.html" vs "image_creator15.html")
-                // Assumes your GitHub Pages base path is '/Social_Image_Creator/'
-                const basePath = '/Social_Image_Creator/';
+                const basePath = '/Social_Image_Creator/'; // Crucial for GitHub Pages
                 const currentRelativePath = normalizedCurrentPath.substring(basePath.length);
                 const linkRelativePath = normalizedLinkPath.substring(basePath.length);
                 
-                // Special handling for the root/dashboard page
-                const isDashboard = (currentRelativePath === '' || currentRelativePath === 'index.html');
-                const isLinkDashboard = (linkRelativePath === '' || linkRelativePath === 'index.html');
-
-
-                if (
-                    (isDashboard && isLinkDashboard) || // Both are dashboard
-                    (!isDashboard && !isLinkDashboard && currentRelativePath === linkRelativePath) // Neither are dashboard, and paths match exactly
-                ) {
+                // No dashboard link, so we just check for direct tool page matches
+                if (currentRelativePath === linkRelativePath) {
                     link.classList.remove('text-gray-300', 'hover:bg-gray-700', 'hover:text-white');
                     link.classList.add('bg-gray-900', 'text-white');
                     link.setAttribute('aria-current', 'page');
