--- a/image_creator.html
+++ b/image_creator.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700;800&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@500;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,500;1,800&display=swap" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -186,6 +187,7 @@
                 <select id="fontStyleSelect" class="w-full px-3 py-2 border-2 border-gray-300 rounded-xl focus:border-blue-500 focus:ring-4 focus:ring-blue-100 transition-all duration-300 text-sm">
                     <option value="Fira Sans" selected>Fira Sans (Default)</option>
                     <option value="Parkinsans">Parkinsans (Magazine)</option>
+                    <option value="Sports">Barlow Condensed (Sports)</option>
                 </select>
             </div>
             <div>
@@ -481,6 +483,9 @@
         } else if (selectedFont === 'Fira Sans') {
             subtitleColorPicker.value = '#FFFFFF'; // White
             subtitleColorPresets.value = '#FFFFFF'; // Set preset too
+        } else if (selectedFont === 'Sports') { // NEW: Sports font default color
+            subtitleColorPicker.value = '#00BFFF'; // Deep Sky Blue for Sports
+            subtitleColorPresets.value = '#00BFFF'; // Set preset too
         }
         // Ensure the preset dropdown reflects the change if the value is one of its options
         for (let i = 0; i < subtitleColorPresets.options.length; i++) {
@@ -492,7 +497,6 @@
         drawCanvas(); // Redraw with new font and color
     });
     // --- END NEW ---
-
 
     imageSizeModeButton.addEventListener('click', () => {
       imageCoverMode = !imageCoverMode;
@@ -610,51 +614,57 @@
     }
 
 
-function drawCanvas() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    function drawCanvas() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    // Determine font families and weights based on selection
-    const selectedFont = fontStyleSelect.value;
-    let subtitleFontFamily, titleFontFamily;
-    let subtitleWeight;
-    let titleWeight;
-    let fontStyle = 'normal'; // Default font style
+      // Determine font families and weights based on selection
+      const selectedFont = fontStyleSelect.value;
+      let subtitleFontFamily, titleFontFamily;
+      let subtitleWeight;
+      let titleWeight;
+      let fontStyle = 'normal'; // Default font style
 
-    // Get the current title size input value
-    let titleSize = parseInt(titleSizeInput.value); // Keep this to allow user override
+      // Get the current title size input value
+      let titleSize = parseInt(titleSizeInput.value); // Keep this to allow user override
 
-    switch (selectedFont) {
+
+      switch (selectedFont) {
         case 'Parkinsans':
-            subtitleFontFamily = 'Parkinsans';
-            titleFontFamily = 'Parkinsans';
-            subtitleWeight = '600';
-            titleWeight = '800';
-            break;
+          subtitleFontFamily = 'Parkinsans';
+          titleFontFamily = 'Parkinsans';
+          subtitleWeight = '600';
+          titleWeight = '800';
+          // If the title size was automatically set to 120 by "Sports", reset it to 80 for other fonts
+          if (titleSizeInput.value === "120" && selectedFont !== 'Sports') {
+                titleSize = 80;
+                titleSizeInput.value = 80;
+          }
+          break;
         case 'Sports': // Sports font case
-            subtitleFontFamily = '"Barlow Condensed"';
-            titleFontFamily = '"Barlow Condensed"';
-            subtitleWeight = '500';
-            titleWeight = '800';
-            fontStyle = 'italic'; // Apply italic style
-            // NEW: Set default title size to 120px for Sports, but allow user override
-            if (titleSizeInput.value === "80" || titleSizeInput.value === "") { // Only set if it's still the original default or empty
-                titleSize = 120;
-                titleSizeInput.value = 120; // Update the input field
-            }
-            break;
+          subtitleFontFamily = '"Barlow Condensed"';
+          titleFontFamily = '"Barlow Condensed"';
+          subtitleWeight = '500';
+          titleWeight = '800';
+          fontStyle = 'italic'; // Apply italic style
+          // NEW: Set default title size to 120px for Sports, but allow user override
+          if (titleSizeInput.value === "80" || titleSizeInput.value === "") { // Only set if it's still the original default or empty
+              titleSize = 120;
+              titleSizeInput.value = 120; // Update the input field
+          }
+          break;
         case 'Fira Sans':
         default:
-            subtitleFontFamily = 'Fira Sans';
-            titleFontFamily = 'Fira Sans';
-            subtitleWeight = '700';
-            titleWeight = '800';
-            // NEW: Reset to 80px if not Sports and currently 120px from Sports
-            if (titleSizeInput.value === "120" && selectedFont !== 'Sports') {
-                 titleSize = 80;
-                 titleSizeInput.value = 80;
-            }
-            break;
-    }
+          subtitleFontFamily = 'Fira Sans';
+          titleFontFamily = 'Fira Sans';
+          subtitleWeight = '700';
+          titleWeight = '800';
+          // If the title size was automatically set to 120 by "Sports", reset it to 80 for other fonts
+          if (titleSizeInput.value === "120" && selectedFont !== 'Sports') {
+               titleSize = 80;
+               titleSizeInput.value = 80;
+          }
+          break;
+      }
 
       if (uploadedImage) {
         const imgRatio = uploadedImage.width / uploadedImage.height;
@@ -732,7 +742,7 @@ function drawCanvas() {
       const subtitleRaw = applyFrenchTypographyRules(subtitleInput.value.trim().toUpperCase());
 
       const placement = parseInt(placementInput.value);
-      let titleSize = parseInt(titleSizeInput.value);
+      // titleSize is now set dynamically at the top of the function
       const subtitleSizeAdj = parseInt(subtitleSizeInput.value);
       const subtitleBgEnabled = subtitleBackgroundToggle.checked;
       const subtitleTextColor = subtitleColorPicker.value;
@@ -748,7 +758,8 @@ function drawCanvas() {
       const maxTextWidth = canvas.width - 200;
 
       let subtitleLines = [];
-      ctx.font = `${subtitleWeight} ${subtitleSizeAdj}px '${subtitleFontFamily}', sans-serif`;
+      // NEW: Apply fontStyle to subtitle
+      ctx.font = `${fontStyle} ${subtitleWeight} ${subtitleSizeAdj}px ${subtitleFontFamily}, sans-serif`;
       // Splitting by regular space still works for initial word wrapping logic, as non-breaking spaces are handled by ctx.measureText
       const subtitleWords = subtitleRaw.split(' ');
       let currentSubtitleLine = '';
@@ -766,7 +777,8 @@ function drawCanvas() {
       if (subtitleLines.length > 2) {
           subtitleLines = subtitleLines.slice(0, 2);
           // Re-evaluate '...' length with the actual font
-          ctx.font = `${subtitleWeight} ${subtitleSizeAdj}px '${subtitleFontFamily}', sans-serif`;
+          // NEW: Apply fontStyle to subtitle for '...' measurement
+          ctx.font = `${fontStyle} ${subtitleWeight} ${subtitleSizeAdj}px ${subtitleFontFamily}, sans-serif`;
           if (ctx.measureText(subtitleLines?.[1] + "\u2026").width < maxTextWidth) { // Use U+2026 HORIZONTAL ELLIPSIS
               subtitleLines[1] += "\u2026";
           }
@@ -778,7 +790,8 @@ function drawCanvas() {
       function wrapTitleLines() {
         titleLines = [];
         let line = '';
-        ctx.font = `${titleWeight} ${titleSize}px '${titleFontFamily}', sans-serif`;
+        // NEW: Apply fontStyle to title
+        ctx.font = `${fontStyle} ${titleWeight} ${titleSize}px ${titleFontFamily}, sans-serif`;
         // Splitting by regular space still works for initial word wrapping logic
         const words = titleRaw.split(' ');
         for (let word of words) {
@@ -869,7 +882,8 @@ function drawCanvas() {
       let currentTextY = posY;
 
       if (subtitleLines.length > 0) {
-          ctx.font = `${subtitleWeight} ${subtitleSizeAdj}px '${subtitleFontFamily}', sans-serif`;
+          // NEW: Apply fontStyle to subtitle
+          ctx.font = `${fontStyle} ${subtitleWeight} ${subtitleSizeAdj}px ${subtitleFontFamily}, sans-serif`;
 
           let maxSubtitleLineTextWidth = 0;
           for (let line of subtitleLines) {
@@ -918,7 +932,8 @@ function drawCanvas() {
       }
 
       ctx.fillStyle = 'white';
-      ctx.font = `${titleWeight} ${titleSize}px '${titleFontFamily}', sans-serif`;
+      // NEW: Apply fontStyle to title
+      ctx.font = `${fontStyle} ${titleWeight} ${titleSize}px ${titleFontFamily}, sans-serif`;
       for (let i = 0; i < titleLines.length; i++) {
         ctx.fillText(titleLines?.[i] ?? '', posX, currentTextY + i * updatedTitleLineHeight);
       }
