--- a/bulk.html
+++ b/bulk.html
@@ -84,9 +84,23 @@
               <input type="file" id="imageUpload" accept="image/*" multiple class="hidden" />
               <p class="text-base text-primary font-bold mb-3">Drag & Drop multiple images here</p>
               <button type="button" onclick="document.getElementById('imageUpload').click()" class="import-button text-white px-4 py-2 rounded-full font-bold transition-all duration-300 hover:-translate-y-1 text-sm">or Click to Select Images</button>
-              <div class="mt-3 p-3 bg-gray-700 rounded-xl text-xs text-secondary leading-relaxed">
+              <div class="mt-3 p-3 bg-gray-700 rounded-xl text-xs text-secondary leading-relaxed" id="imageNote">
                 <span class="text-purple-300 font-bold">Note:</span> Images will be rendered in their original aspect ratio, scaled to a maximum of 2000px (width or height).
               </div>
+          </div>
+
+          <div class="mb-4">
+            <h3 class="text-md font-bold text-primary mb-2">Output Settings:</h3>
+            <div class="flex flex-col gap-2">
+              <label class="inline-flex items-center text-primary text-sm">
+                <input type="radio" name="outputSize" value="original" checked class="form-radio text-purple-600 h-4 w-4" />
+                <span class="ml-2">Original Size & Ratio (Max 2000px edge)</span>
+              </label>
+              <label class="inline-flex items-center text-primary text-sm">
+                <input type="radio" name="outputSize" value="compressed" class="form-radio text-purple-600 h-4 w-4" />
+                <span class="ml-2">Compressed (Max 1920px longest edge, 80% quality)</span>
+              </label>
+            </div>
           </div>
 
           <div class="space-y-4">
@@ -120,27 +134,33 @@
     const downloadAllButton = document.getElementById('downloadAllButton');
     const processingStatus = document.getElementById('processingStatus');
     const processedCountText = document.getElementById('processedCountText');
+    const imageNote = document.getElementById('imageNote'); // Get the note element
 
-    const MAX_DIMENSION = 2000; // Maximum width or height for output images
+    // Get the new radio buttons
+    const outputSizeRadios = document.querySelectorAll('input[name="outputSize"]');
+
+    const MAX_DIMENSION_ORIGINAL = 2000; // Maximum width or height for "Original" output
+    const MAX_DIMENSION_COMPRESSED = 1920; // Maximum width or height for "Compressed" output
+    const WEBP_QUALITY_COMPRESSED = 0.7; // Quality for "Compressed" output
 
     // Dynamic Logo Sizing Parameters
-    const CENTER_LOGO_WIDTH_RATIO = 0.5; // Central logo will be 50% of image width (Reverted to 0.5)
-    const MAX_CENTER_LOGO_WIDTH = 800; // Max pixel width for central logo
+    const CENTER_LOGO_WIDTH_RATIO = 0.5;
+    const MAX_CENTER_LOGO_WIDTH = 800;
 
-    const BOTTOM_LOGO_HEIGHT_RATIO_ASSET2 = 0.05; // Asset 2 logo height will be 5% of image height
-    const BOTTOM_LOGO_HEIGHT_RATIO_MAIN = 0.06; // Main logo height will be 6% of image height
-    const MAX_BOTTOM_LOGO_HEIGHT = 60; // Max pixel height for bottom logos
+    const BOTTOM_LOGO_HEIGHT_RATIO_ASSET2 = 0.05;
+    const BOTTOM_LOGO_HEIGHT_RATIO_MAIN = 0.06;
+    const MAX_BOTTOM_LOGO_HEIGHT = 60;
 
     // Dynamic Padding Parameters
-    const LOGO_BOTTOM_PADDING_RATIO = 0.04; // 4% of image height for bottom padding
-    const LOGO_LEFT_PADDING_RATIO = 0.05; // 5% of image width for left padding
-    const MIN_PADDING_PX = 15; // Minimum padding in pixels, for very small images
-    const LOGO_SPACING = 10; // Fixed spacing between logos (can be made dynamic too if needed)
-
+    const LOGO_BOTTOM_PADDING_RATIO = 0.04;
+    const LOGO_LEFT_PADDING_RATIO = 0.05;
+    const MIN_PADDING_PX = 15;
+    const LOGO_SPACING = 10;
 
     let filesToProcess = [];
     let processedImages = []; // Stores { name: originalFileName, url: dataURL }
     let currentProcessedCount = 0;
+    let currentOutputSetting = 'original'; // Default to original
 
     // Load watermark images
     const watermarkLogo = new Image();
@@ -259,7 +279,28 @@
         downloadAllButton.classList.add('hidden');
         processingStatus.classList.add('hidden');
         drawInitialCanvas();
+        // Reset note to default
+        imageNote.innerHTML = `<span class="text-purple-300 font-bold">Note:</span> Images will be rendered in their original aspect ratio, scaled to a maximum of 2000px (width or height).`;
+        document.querySelector('input[name="outputSize"][value="original"]').checked = true; // Reset radio button
+        currentOutputSetting = 'original'; // Reset setting
     }
+
+    // --- New: Handle output size selection ---
+    outputSizeRadios.forEach(radio => {
+        radio.addEventListener('change', (event) => {
+            currentOutputSetting = event.target.value;
+            // Update the canvas note based on the selection
+            if (currentOutputSetting === 'compressed') {
+                imageNote.innerHTML = `
+                    <span class="text-purple-300 font-bold">Note:</span> Images will be compressed to a maximum of 1920px (longest edge) with 80% quality.
+                `;
+            } else {
+                imageNote.innerHTML = `
+                    <span class="text-purple-300 font-bold">Note:</span> Images will be rendered in their original aspect ratio, scaled to a maximum of 2000px (width or height).
+                `;
+            }
+        });
+    });
 
 
     // --- Processing Logic ---
@@ -313,9 +354,20 @@
                 let newWidth = originalWidth;
                 let newHeight = originalHeight;
 
-                // Scale down if dimensions exceed MAX_DIMENSION
-                if (originalWidth > MAX_DIMENSION || originalHeight > MAX_DIMENSION) {
-                    const scaleFactor = Math.min(MAX_DIMENSION / originalWidth, MAX_DIMENSION / originalHeight);
+                let maxDimension;
+                let outputQuality = 1.0; // Default to full quality for original size
+                let outputMimeType = 'image/webp'; // Always output as webp
+
+                if (currentOutputSetting === 'compressed') {
+                    maxDimension = MAX_DIMENSION_COMPRESSED;
+                    outputQuality = WEBP_QUALITY_COMPRESSED;
+                } else {
+                    maxDimension = MAX_DIMENSION_ORIGINAL;
+                }
+
+                // Scale down if dimensions exceed the chosen maxDimension
+                if (originalWidth > maxDimension || originalHeight > maxDimension) {
+                    const scaleFactor = Math.min(maxDimension / originalWidth, maxDimension / originalHeight);
                     newWidth = originalWidth * scaleFactor;
                     newHeight = originalHeight * scaleFactor;
                 }
@@ -367,7 +419,7 @@
                     const centerLogoX = (newWidth - centerLogoWidth) / 2;
                     const centerLogoY = (newHeight - centerLogoHeight) / 2;
 
-                    offscreenCtx.globalAlpha = 0.04; // 4% opacity (Reverted to 0.02)
+                    offscreenCtx.globalAlpha = 0.04;
                     offscreenCtx.drawImage(watermarkLogo, centerLogoX, centerLogoY, centerLogoWidth, centerLogoHeight);
                     offscreenCtx.restore();
                 }
@@ -410,7 +462,7 @@
                 offscreenCtx.restore();
 
                 // Store the processed image Data URL
-                processedImages.push({ name: file.name, url: offscreenCanvas.toDataURL('image/webp', 1.0) });
+                processedImages.push({ name: file.name, url: offscreenCanvas.toDataURL(outputMimeType, outputQuality) });
 
                 currentProcessedCount++;
                 processedCountText.textContent = `Processing ${currentProcessedCount}/${filesToProcess.length}...`;
