changed dashboard to 4x2 col and added bulk wartermarker

--- a/index.html
+++ b/index.html
@@ -381,10 +381,12 @@
                         <div class="flex space-x-4">
                             <a href="https://8urt.github.io/Social_Image_Creator/image_creator.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="image_creator.html">Social Image Creator</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/watermarker" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker">Photo Watermarker</a>
+                            <a href="https://8urt.github.io/Social_Image_Creator/watermarker_1.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker_1.html">Watermarker LM + Overlay</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/bulk.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="bulk.html">Bulk Watermarking</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/Quote_creator.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="Quote_creator.html">Quote Image Creator</a>
                             <a href="https://8urt.github.io/Social_Image_Creator/mindvalley.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="mindvalley.html">Long Title Creator</a>
                             <a href="https://8urt.github.io/Turf_Magazine/" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="turf_magazine">Turf Magazine Creator</a>
+                            <a href="https://8urt.github.io/Turf_Magazine/bulk.html" class="nav-link rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="turf_magazine_bulk">Turf Mag Bulk Watermarking</a>
                         </div>
                     </div>
                 </div>
@@ -395,16 +397,18 @@
             <div class="space-y-1 px-2 pt-2 pb-3">
                 <a href="https://8urt.github.io/Social_Image_Creator/image_creator.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="image_creator.html">Social Image Creator</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/watermarker" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker">Photo Watermarker</a>
+                <a href="https://8urt.github.io/Social_Image_Creator/watermarker_1.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="watermarker_1.html">Watermarker LM + Overlay</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/bulk.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="bulk.html">Bulk Watermarking</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/Quote_creator.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="Quote_creator.html">Quote Image Creator</a>
                 <a href="https://8urt.github.io/Social_Image_Creator/mindvalley.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="mindvalley.html">Long Title Creator</a>
                 <a href="https://8urt.github.io/Turf_Magazine/" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="turf_magazine">Turf Magazine Creator</a>
+                <a href="https://8urt.github.io/Turf_Magazine/bulk.html" class="nav-link block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" data-page-path="turf_magazine_bulk">Turf Mag Bulk Watermarking</a>
             </div>
         </div>
     </nav>
 
     <main class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8 pt-24">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <div id="social-image-creator" class="tool-card">
                 <img src="./assets/social-media-image (3).png" alt="Illustration of social media image creation" class="w-full h-48 object-cover rounded-md mb-4">
                 <h2 class="text-xl font-semibold text-card-title-light mb-2">Social Image Creator</h2>
@@ -419,13 +423,20 @@
                 <a href="https://8urt.github.io/Social_Image_Creator/watermarker" class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-md hover:bg-indigo-700 transition-colors mt-auto">Launch Tool</a>
             </div>
 
+            <div id="watermarker-lm-overlay" class="tool-card">
+                <img src="./assets/watermarkeroverlay.png" alt="Illustration of watermarking with overlay" class="w-full h-48 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-card-title-light mb-2">Watermarker LM + Overlay</h2>
+                <p class="text-gray-600 mb-4">Add watermarks with a custom overlay to protect and brand your images.</p>
+                <a href="https://8urt.github.io/Social_Image_Creator/watermarker_1.html" class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-md hover:bg-indigo-700 transition-colors mt-auto">Launch Tool</a>
+            </div>
+
             <div id="bulk-watermarking" class="tool-card">
                 <img src="./assets/watermarked_pexels-monicore-1391487.webp" alt="Illustration of bulk image watermarking" class="w-full h-48 object-cover rounded-md mb-4">
                 <h2 class="text-xl font-semibold text-card-title-light mb-2">Bulk Image Watermarking</h2>
                 <p class="text-gray-600 mb-4">Efficiently watermark multiple images at once, perfect for Facebook and other platforms.</p>
                 <a href="https://8urt.github.io/Social_Image_Creator/bulk.html" class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-md hover:bg-indigo-700 transition-colors mt-auto">Launch Tool</a>
             </div>
-
+            
             <div id="quote-image-creator" class="tool-card">
                 <img src="./assets/quote-image.png" alt="Illustration of quote image creation" class="w-full h-48 object-cover rounded-md mb-4">
                 <h2 class="text-xl font-semibold text-card-title-light mb-2">Quote Image Creator</h2>
@@ -445,6 +456,13 @@
                 <h2 class="text-xl font-semibold text-card-title-light mb-2">Turf Magazine Image Creator</h2>
                 <p class="text-gray-600 mb-4">Create magazine-style covers for articles and posts with a distinctive, professional look.</p>
                 <a href="https://8urt.github.io/Turf_Magazine/" class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-md hover:bg-indigo-700 transition-colors mt-auto">Launch Tool</a>
+            </div>
+            
+            <div id="turf-mag-bulk-watermarking" class="tool-card">
+                <img src="./assets/turfbulk.webp" alt="Illustration for Turf Magazine bulk watermarking" class="w-full h-48 object-cover rounded-md mb-4">
+                <h2 class="text-xl font-semibold text-card-title-light mb-2">Turf Mag Bulk Watermarking</h2>
+                <p class="text-gray-600 mb-4">Batch watermark multiple images with custom settings for Turf Magazine articles.</p>
+                <a href="https://8urt.github.io/Turf_Magazine/bulk.html" class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-md hover:bg-indigo-700 transition-colors mt-auto">Launch Tool</a>
             </div>
         </div>
     </main>
